# nexus

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
app/: __init__.py  config.py  constants.py
app/agent/: __init__.py  agent.py  executor.py  llm.py  memory.py  planner.py  prompts.py
app/core/: __init__.py  base_tool.py  exceptions.py  result.py  tool_manager.py
app/mcp/: __init__.py  registry.py  server.py
app/services/: __init__.py  applications.py  browser.py  filesystem.py  media.py  system.py  terminal.py
app/tools/: __init__.py  applications.py  browser.py  filesystem.py  media.py  system.py  terminal.py
app/utils/: helpers.py  logger.py  paths.py  permissions.py
tests/: test_planner.py  test_tool_manager.py
