[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-desktop-agent"
version = "0.1.0"
description = "A modular local AI desktop agent for Windows powered by Ollama."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Nexus Contributors" }]
dependencies = ["psutil>=5.9.8"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
